--- a/personal_blog/src/component/BlogItem/index.scss
+++ b/personal_blog/src/component/BlogItem/index.scss
@@ -22,6 +22,31 @@
             border-bottom: 1px solid #ccc;
         }
 
-        .blog_span_box {}
+        .blog_span_box {
+            display: flex;
+            align-items: center;
+
+            span {
+                padding: 3px 17px;
+                margin: 0 10px;
+                border-radius: 4px;
+            }
+
+            .item_img {
+                width: 50px;
+                height: 50px;
+                display: inline-block;
+                border-radius: 50%;
+                padding: 0;
+                margin: 0;
+                overflow: hidden;
+                text-align: center;
+
+                img {
+                    width: 50px;
+                    height: 100%;
+                }
+            }
+        }
     }
 }
